<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/pref_category_display"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="hide_address_bar"
            android:title="@string/pref_hide_address_bar"
            android:summary="@string/pref_hide_address_bar_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="hide_status_bar"
            android:title="@string/pref_hide_status_bar"
            android:summary="@string/pref_hide_status_bar_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="keep_alive"
            android:title="@string/pref_keep_alive"
            android:summary="@string/pref_keep_alive_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="toolbar_position"
            android:title="@string/pref_toolbar_position"
            android:summary="@string/pref_toolbar_position_summary"
            android:entries="@array/toolbar_position_entries"
            android:entryValues="@array/toolbar_position_values"
            android:defaultValue="top"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_browser"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="restore_last_page"
            android:title="@string/pref_restore_last_page"
            android:summary="@string/pref_restore_last_page_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:key="home_page"
            android:title="@string/pref_home_page"
            android:summary="@string/pref_home_page_summary"
            android:defaultValue="https://www.google.com"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="blocked_domains_settings"
            android:title="@string/pref_blocked_domains"
            android:summary="@string/pref_blocked_domains_summary"
            app:iconSpaceReserved="false">
            <intent android:targetPackage="com.webview.browser"
                android:targetClass="com.webview.browser.BlockedDomainsActivity"/>
        </Preference>

        <ListPreference
            android:key="user_agent"
            android:title="@string/pref_user_agent"
            android:summary="@string/pref_user_agent_summary"
            android:entries="@array/user_agent_entries"
            android:entryValues="@array/user_agent_values"
            android:defaultValue="default"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:key="custom_user_agent"
            android:title="@string/pref_custom_ua"
            android:summary="@string/pref_custom_ua_summary"
            android:dependency="user_agent"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="javascript"
            android:title="@string/pref_javascript"
            android:summary="@string/pref_javascript_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="desktop_mode"
            android:title="@string/pref_desktop_mode"
            android:summary="@string/pref_desktop_mode_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>